[metadata]
name = robotframework-aircvlibrary
author = Joe Hisaishi
author-email = joehisaishi1943@gmail.com
summary = aircv wrapper for RobotFramework 
license = GPLv2
description-file = 
	README.md
home-page = https://github.com/lucyking/robotframework-aircvlibrary
requires-python = >=2.7
classifier = 
	Environment :: Console
	Intended Audience :: Developers
	Operating System :: OS Independent
	Programming Language :: Python :: 2.7

[files]
packages =
	src
